name:                vector-test
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Martin Westerholt-Raum
maintainer:           
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Test.Vector
  other-modules:       
    Test.Vector.QuickCheck
    Test.Vector.SmallCheck
  -- other-extensions:    
  build-depends:
      base >=4.8 && <4.10
    , natural-test
    , QuickCheck
    , smallcheck
    , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
